--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,2 +1,7 @@
 @import 'variables';
 @import 'App';
+@import 'Nav';
+@import 'Login';
+@import 'MovieList';
+@import 'MovieCard';
+@import 'MoviePage';
