--- a/src/styles/_Nav.scss
+++ b/src/styles/_Nav.scss
@@ -6,14 +6,15 @@ header {
 }
 
 .header-nav {
-  width: 500px;
+  width: 50%;
   display: flex;
 }
 
 .nav-link {
   text-decoration: none;
-  width: 125px;
+  width: 250px;
   color: white;
+  font-size: 20px;
 }
 
 .selectedLink {
