--- a/src/styles/_MovieCard.scss
+++ b/src/styles/_MovieCard.scss
@@ -1,15 +1,24 @@
 .movie {
   margin: 10px;
   background-color: rgb(30, 30, 30);
+  position: relative;
+  height: fit-content;
+  min-width: 230px;
 }
 
 .card-header {
   background-color: rgb(30, 30, 30);
-  height: 60px;
+  height: 50px;
   font-size: 1.2em;
   text-align: center;
   padding: 5px;
-  vertical-align: middle;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.card-header p {
+  background-color: rgb(30, 30, 30);
 }
 
 .card-image {
@@ -17,16 +26,29 @@
   min-height: 300px;
   max-width: 250px;
   background-color: rgb(30, 30, 30);
+  position: relative;
+}
+
+.card-favorite-image {
+  position: absolute;
+
+  height: 40px;
+  background-color: rgba(255, 255, 255, 0);
+  z-index: 9;
+  right: 4%;
+  top: 1%;
 }
 
 .card-release-date {
   background-color: rgb(30, 30, 30);
+  margin-bottom: 10px;
 }
 
 .movie:hover,
 .movie:hover .card-release-date,
 .movie:hover .card-image,
-.movie:hover .card-header {
+.movie:hover .card-header,
+.movie:hover .card-header p {
   background-color: rgb(0, 0, 0);
 }
 
