--- a/src/styles/_Nav.scss
+++ b/src/styles/_Nav.scss
@@ -3,10 +3,14 @@ header {
   justify-content: space-between;
   align-items: center;
   height: 80px;
+  // position: fixed;
+  // top: 0;
+  // width: 100%;
+  // z-index: 2;
 }
 
 .header-nav {
-  width: 50%;
+  width: 80%;
   display: flex;
 }
 
@@ -15,8 +19,39 @@ header {
   width: 250px;
   color: white;
   font-size: 20px;
+  line-height: 45px;
 }
 
 .selectedLink {
   animation-duration: 0.5s;
+}
+
+.user-avatar {
+  height: 25px;
+  margin-right: 9px;
+  background-color: rgba(255, 255, 255, 0);
+}
+
+.header-user-menu {
+  margin-top: 10px;
+  width: 250px;
+  margin-right: 15px;
+}
+
+.inner {
+  display: flex;
+  justify-content: flex-end;
+  background: red;
+  color: white;
+  border-radius: 10px;
+  padding: 1em;
+  width: 250px;
+  clip-path: circle(10% at 85% 50%);
+  transition: all 0.5s ease-in-out;
+  cursor: pointer;
+}
+
+.inner:hover {
+  clip-path: circle(75%);
+  background: purple;
 }
