--- a/src/styles/_Nav.scss
+++ b/src/styles/_Nav.scss
@@ -3,10 +3,11 @@ header {
   justify-content: space-between;
   align-items: center;
   height: 80px;
-  // position: fixed;
-  // top: 0;
-  // width: 100%;
-  // z-index: 2;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 2;
+  border-bottom: 1px solid grey;
 }
 
 .header-nav {
