--- a/src/styles/_MovieCard.scss
+++ b/src/styles/_MovieCard.scss
@@ -62,3 +62,11 @@
   0% { transform: scale(1) }
   100% {transform: scale(1.03)}
 }
+
+.favorite {
+  box-shadow: 0px 0px 15px gold;
+}
+
+.favorite:hover {
+  box-shadow: 0px 0px 20px gold;
+}
