--- a/src/styles/_Nav.scss
+++ b/src/styles/_Nav.scss
@@ -10,49 +10,37 @@ header {
   border-bottom: 1px solid grey;
 }
 
+.header-app {
+  text-decoration: none;
+}
+
 .header-nav {
   width: 80%;
   display: flex;
 }
 
+.user-name {
+  font-size: 20px;
+  font-weight: 900;
+  margin-right: 20px;
+}
+
 .nav-link {
   text-decoration: none;
   width: 250px;
-  color: white;
   font-size: 20px;
   line-height: 45px;
 }
 
 .selectedLink {
+  font-weight: 800;
   animation-duration: 0.5s;
 }
 
-.user-avatar {
-  height: 25px;
-  margin-right: 9px;
-  background-color: rgba(255, 255, 255, 0);
-}
-
-.header-user-menu {
-  margin-top: 10px;
-  width: 250px;
-  margin-right: 15px;
-}
-
-.inner {
-  display: flex;
-  justify-content: flex-end;
-  background: red;
-  color: white;
-  border-radius: 10px;
-  padding: 1em;
-  width: 250px;
-  clip-path: circle(10% at 85% 50%);
-  transition: all 0.5s ease-in-out;
-  cursor: pointer;
-}
-
-.inner:hover {
-  clip-path: circle(75%);
-  background: purple;
+#logout-btn {
+  border: none;
+  background: none;
+  font-size: 20px;
+  font-weight: 900;
+  margin-right: 20px;
 }
