--- a/src/styles/_Nav.scss
+++ b/src/styles/_Nav.scss
@@ -43,4 +43,12 @@ header {
   font-size: 20px;
   font-weight: 900;
   margin-right: 20px;
+
+  &:hover {
+    cursor: pointer;
+  }
+
+  &:focus {
+    outline: none;
+  }
 }
