--- a/src/styles/_Login.scss
+++ b/src/styles/_Login.scss
@@ -1,5 +1,5 @@
 .screen-cover {
-  margin-top: 150px;
+  position: absolute;
   background: rgba(0, 0, 0, 0.8);
   width: 100%;
   height: 100vh;
@@ -8,6 +8,7 @@
 .login {
   display: flex;
   justify-content: center;
+  align-items: center;
   background: url('../images/backgroung-cover.jpg');
   background-repeat: no-repeat;
   background-size: cover;
@@ -20,7 +21,7 @@
   justify-content: center;
   align-items: center;
   width: 700px;
-  height: 400px;
+  height: 450px;
   border: 1px solid rgba(255, 255, 255, 0.5);
   background-color: rgba(0, 0, 0, 0.8);
 }
